{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 57,
  "lineage": "428a60a8-7838-6d40-2cdb-620a74a87f86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "Wireless-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-083b0c513bde8c06e",
            "id": "rtb-083b0c513bde8c06e",
            "owner_id": "170828877707",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7e843a09fc602bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Wireless-default-route"
            },
            "vpc_id": "vpc-0277f16d065672bb5"
          },
          "dependencies": [
            "aws_internet_gateway.Wireless-gateway",
            "aws_vpc.Wireless-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Wireless",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:170828877707:instance/i-062c237dce6e543ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062c237dce6e543ab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "charles",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09bbb69fa9445f6ad",
            "private_dns": "ip-172-16-1-74.ec2.internal",
            "private_ip": "172.16.1.74",
            "public_dns": "ec2-3-81-43-78.compute-1.amazonaws.com",
            "public_ip": "3.81.43.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02274672177041ce7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a49bca2fb492d9b",
            "tags": {
              "Name": "terraform-Wireless-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06788e0856e203bb4"
            ]
          },
          "dependencies": [
            "aws_security_group.Wireless",
            "aws_subnet.Wireless-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Wireless-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170828877707:internet-gateway/igw-0d7e843a09fc602bd",
            "id": "igw-0d7e843a09fc602bd",
            "owner_id": "170828877707",
            "tags": {
              "Name": "Wireless-gateway"
            },
            "vpc_id": "vpc-0277f16d065672bb5"
          },
          "dependencies": [
            "aws_vpc.Wireless-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Wireless",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170828877707:security-group/sg-06788e0856e203bb4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06788e0856e203bb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Wireless",
            "name_prefix": "",
            "owner_id": "170828877707",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0277f16d065672bb5"
          },
          "dependencies": [
            "aws_vpc.Wireless-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Wireless-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170828877707:subnet/subnet-04a49bca2fb492d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-04a49bca2fb492d9b",
            "map_public_ip_on_launch": true,
            "owner_id": "170828877707",
            "tags": {
              "Name": "Wireless-subnet-terraform"
            },
            "vpc_id": "vpc-0277f16d065672bb5"
          },
          "dependencies": [
            "aws_vpc.Wireless-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Wireless-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170828877707:vpc/vpc-0277f16d065672bb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0e843e3a25f7a7dd8",
            "default_route_table_id": "rtb-083b0c513bde8c06e",
            "default_security_group_id": "sg-0db924c37984c6c1e",
            "dhcp_options_id": "dopt-fcc95186",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0277f16d065672bb5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-083b0c513bde8c06e",
            "owner_id": "170828877707",
            "tags": {
              "Name": "VPC_ej_Terraform"
            }
          }
        }
      ]
    }
  ]
}